<resources>
    <string name="app_name">WeatherApp</string>
    <string name="almaty_ala">ALMATY, ALA</string>
    <string name="updated_text">22 January 2021, 20:41 PM</string>
    <string name="weather_title">Clear Sky</string>
    <string name="temperature">29°C</string>
    <string name="min_temp">Min Temp: 05:05 AM</string>
    <string name="max_temp">Max Temp: 05:05 PM</string>
    <string name="sunrise">Sunrise</string>
    <string name="time_text">06:40 AM</string>
    <string name="sunset">Sunset</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="created_by">Created By</string>
    <string name="sunnydroid">SunnyDroid</string>
    <string name="error_text">Something went wrong</string>
</resources>